# dragonfly-flight-control

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  lcm_plan.md  reachable.h5  reachable_trial.h5  requirements.txt
.github/workflows/: case-data.yml  docs.yml
apps/: cmd_args.hpp  cmd_hover.cpp  cmd_hover.hpp  cmd_optim.cpp  cmd_optim.hpp  cmd_plot.cpp  cmd_plot.hpp  cmd_pursuit.cpp  cmd_pursuit.hpp  cmd_reachable.cpp  cmd_reachable.hpp  cmd_sim.cpp  cmd_sim.hpp  cmd_termvel.cpp  cmd_termvel.hpp  cmd_test.cpp  cmd_test.hpp  cmd_track.cpp  cmd_track.hpp  cmd_wingtest.cpp  cmd_wingtest.hpp  dragonfly_cli.cpp
assets/: dragonfly_silhouette.csv
cases/azuma1985/: aoa.csv  case.yaml  paper_data.csv  pipeline.py  plot_flight_metrics.py  plot_kinematics.py  plot_motion_mapping.py  post.yaml  stick_animation.py
cases/azuma1988/: modeling_wing_kinematics_media.py  pipeline.py  plot_exp1_force_segments.py  plot_flight_metrics.py  plot_kinematics.py  plot_motion_mapping.py  plot_stroke_aoa_inputs.py
cases/azuma1988_exp1/: case.yaml  post.yaml
cases/azuma1988_exp2/: case.yaml  post.yaml
cases/azuma1988_exp3/: case.yaml  post.yaml
cases/azuma1988_exp4/: case.yaml  post.yaml
cases/hover/: hover_stick_high_mu.yaml  hover_stick_ref.yaml  post.yaml
cases/hover_control/: post.yaml  render_config.json
cases/modeling_wing_kinematics/: case.yaml  post.yaml  render_config.fore_left_cone_normal.json  render_config.p111_stroke_planes.json  render_config.side_y.json  render_config.side_y_cones.json
cases/pursuit/: case.yaml  post.yaml  render_config.json
cases/reachable/: post.yaml
cases/reachable_boundary/: case_0.yaml  case_0_sync.yaml  case_1.yaml  case_1_sync.yaml  case_2.yaml  case_2_sync.yaml  case_3.yaml  case_3_sync.yaml  case_4.yaml  case_4_sync.yaml  case_5.yaml  case_5_sync.yaml  gen_cases.py  post.yaml
cases/reachable_climb/: case_0_sync.yaml  case_1_sync.yaml  case_2_sync.yaml  case_3_sync.yaml  case_4_sync.yaml  case_5_sync.yaml  case_6_sync.yaml  case_7_sync.yaml  gen_cases.py  post.yaml
cases/reachable_climb_forward/: case_0_sync.yaml  case_1_sync.yaml  case_2_sync.yaml  case_3_sync.yaml  case_4_sync.yaml  case_5_sync.yaml  case_6_sync.yaml  gen_cases.py  post.yaml
cases/reachable_hover/: case_0_sync.yaml  case_1_sync.yaml  case_2_sync.yaml  case_3_sync.yaml  case_4_sync.yaml  case_5_sync.yaml  case_6_sync.yaml  case_7_sync.yaml  gen_cases.py  post.yaml
cases/wang2007/: case.yaml  common.py  pipeline.py  plot_kinematics.py  plot_motion_mapping.py  post.yaml
cases/wang2007_1harm/: case.yaml
configs/: hover_control.yaml  hover_minpower.h5  hover_minpower.yaml  optim.cfg  optim_phase_amplitude.cfg  optim_stroke_plane.cfg  plot.cfg  pursuit.yaml  reachable.yaml  reachable_2param.yaml  reachable_4param.yaml  reachable_4param_psiamp.yaml  reachable_5param.yaml  reachable_5param_nophimean.yaml  reachable_6param.yaml  reachable_7param.yaml  reachable_phase_neg_pi2.yaml  reachable_phase_pos_pi2.yaml  reachable_phase_zero.yaml  sim_6wing.cfg  sim_figure_eight.cfg  sim_forward.cfg  sim_horizontal.cfg  sim_hover.cfg  sim_inclined.cfg  sim_misc.cfg  sim_track_circle.cfg  sim_track_hover.cfg
data/case_studies/: README.md
data/schema/: case_study.schema.json
docs/: Doxyfile  Makefile  conf.py  index.md  media_build_manifest.json  media_registry.json  output_format.md  references.bib  requirements.txt
docs/_static/: custom.css  theme_media.js
docs/api/: cpp.rst  index.md  python.rst
docs/case_studies/: azuma1985.md  azuma1988.md  index.md  wang2007.md
docs/guides/: contributing_docs.md  getting_started.md
docs/model/: blade_elements.md  equation_of_motion.md  nondimensionalization.md  wing_kinematics.md
docs/modeling/: nondimensionalization.md  physics_model.md  wing_kinematics.md
docs/research/: hover.md  pursuit.md  reachable.md
docs/theory/: overview.md  physics_model.md  wing_kinematics.md
docs/validation/: azuma1985.md  azuma1988.md  wang2007.md
include/: blade_element.hpp  config.hpp  controller.hpp  dragonfly2d.hpp  eom.hpp  integrator.hpp  kinematics.hpp  linalg.hpp  optimize.hpp  output.hpp  parse_utils.hpp  rotation.hpp  sampling.hpp  sim_setup.hpp  terminal_velocity.hpp  trajectory.hpp  trajectory_controller.hpp  wing.hpp  wingforce.hpp
include/optimizer/: flex_optim.hpp  objective.hpp  optim_params.hpp
post/: README.md  __init__.py  animate_wing_rotation.py  animation.py  annotation_overlay.py  composite.py  constants.py  docs_artifacts.py  dragonfly.py  hybrid_config.py  io.py  kinematics.py  main.py  mpl_overlay.py  plot_aero_coefficients.py  plot_azuma1985_flight_metrics.py  plot_azuma1985_kinematics.py  plot_azuma1985_motion_mapping.py  plot_azuma1988_exp1_force_segments.py  plot_azuma1988_flight_metrics.py  plot_azuma1988_kinematics.py  plot_azuma1988_motion_mapping.py  plot_azuma1988_stroke_aoa_inputs.py  plot_force_comparison.py  plot_landscape.py  plot_reachable.py  plot_simulation.py  plot_stick.py  plot_stroke_aoa.py  plot_stroke_pitch.py  plot_terminal_velocity.py  plot_tracking.py  plot_wang2007_kinematics.py  plot_wang2007_motion_mapping.py  plot_wing_rotation.py  progress.py  read_output.py  stroke_common.py  style.py  time_series.py  (+4 more)
post/blender/: __init__.py  materials.py  render_dragonfly.py
post/lcm/: solver.py  (+3 more)
scripts/: azuma1985_pipeline.py  azuma1988_pipeline.py  case_data.py  case_runner.py  docs_media_config.py  docs_media_runner.py  experimental_conventions.py  generate_case_study_docs.py  modeling_wing_kinematics_media.py  pipeline_common.py  update_docs_media.py  validate_case_data.py  wang2007_pipeline.py
src/: blade_element.cpp  config.cpp  controller.cpp  dragonfly2d.cpp  eom.cpp  integrator.cpp  main.cpp  optimize.cpp  output.cpp  rotation.cpp  sampling.cpp  sim_setup.cpp  terminal_velocity.cpp  trajectory.cpp  trajectory_controller.cpp  wing.cpp  wingforce.cpp
tests/: README.md  test_blade_element.cpp  test_config.cpp  test_freefall.cpp  test_optimizer.cpp  test_pid.cpp  test_rotation.cpp  test_sampling.cpp  test_stationary_wing.cpp  test_terminal_velocity.cpp  test_tracking.cpp
(+301 files in other folders)
